# respire

./: .gitignore  Cargo.toml  LICENSE  README.md  error_analysis.ipynb
benches/: math.rs  pir.rs
fhe-psi/: Cargo.toml
fhe-psi/benches/: math.rs  pir.rs
fhe-psi/src/: cyclotomic.rs  discrete_gaussian.rs  fhe.rs  gadget.rs  gsw.rs  intersect.rs  lib.rs  main.rs  matrix.rs  params.rs  poly.rs  polynomial.rs  ring_elem.rs  z_n.rs  z_n_cyclo.rs
fhe-psi/src/fhe/: discrete_gaussian.rs  fhe.rs  gadget.rs  gsw.rs  gsw_crt.rs  gsw_utils.rs  mod.rs  noise_tracker.rs  ringgsw.rs  ringgsw_crt.rs  ringgsw_ntt.rs  ringgsw_ntt_crt.rs  ringgsw_raw.rs
fhe-psi/src/math/: discrete_gaussian.rs  gadget.rs  int_mod.rs  int_mod_crt.rs  int_mod_cyclo.rs  int_mod_cyclo_crt.rs  int_mod_cyclo_crt_eval.rs  int_mod_cyclo_eval.rs  int_mod_poly.rs  matrix.rs  mod.rs  ntt.rs  number_theory.rs  polynomial.rs  rand_sampled.rs  ring_elem.rs  simd_utils.rs  utils.rs  z_n.rs  z_n_crt.rs  z_n_cyclo.rs  z_n_cyclo_crt.rs  z_n_cyclo_crt_ntt.rs  z_n_cyclo_ntt.rs
fhe-psi/src/pir/: encoding.rs  example.rs  gsw_encoding.rs  matrix_regev_encoding.rs  mod.rs  noise.rs  pir.rs
fhe-psi/src/psi/: intersect.rs  mod.rs
src/: lib.rs
src/fhe/: gsw_crt.rs  gsw_utils.rs  ringgsw_crt.rs  ringgsw_ntt.rs  ringgsw_ntt_crt.rs  tests.rs
src/math/: gadget.rs  int_mod.rs  int_mod_crt.rs  int_mod_cyclo.rs  int_mod_cyclo_crt.rs  int_mod_cyclo_crt_eval.rs  int_mod_cyclo_eval.rs  int_mod_poly.rs  ring_elem.rs  simd_utils.rs
src/pir/: batch.rs  cuckoo_respire.rs  example.rs  mod.rs  pir.rs  respire.rs  respire_factory.rs  respire_harness.rs  respire_params.rs
