[package]
name = "fhe-psi"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bitvec = "1.0.1"
itertools = "0.11.0"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
# lto = "fat"
# codegen-units = 1
# panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "math"
harness = false

[[bench]]
name = "pir"
harness = false

[[bin]]
name = "respire_stress"

[[bin]]
name = "cuckoo_respire_stress"

[dev-dependencies]
criterion = "0.5.1"
