[package]
name = "fhe-psi"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
libm = "0.2.7"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"

[profile.release]
# lto = "fat"
# codegen-units = 1
# panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
